fix body overflow scrollbar

--- a/src/components/LeftSideBar/LeftSideBar.scss
+++ b/src/components/LeftSideBar/LeftSideBar.scss
@@ -3,7 +3,7 @@
     left: 0;
     bottom: 0;
     position: relative;
-    width: 256px;
+    width: 200px;
     height: 100%;
     border-right: 1px solid #eaeaea; 
     border-bottom: 1px solid #eaeaea;
