--- a/src/components/NavBar/Navbar.scss
+++ b/src/components/NavBar/Navbar.scss
@@ -1,7 +1,7 @@
 
 .main-nav{
     box-shadow: none;
-    height: 10vh;
+    height: 75px;
     border-bottom: 1px solid #eaeaea;
 
     i{
