--- a/src/components/mainSection/MainSection.scss
+++ b/src/components/mainSection/MainSection.scss
@@ -1,4 +1,4 @@
 .main-section {
-    flex-grow: 10;
+    flex-grow: 1;
     padding: 7px;
 }
