--- a/src/views/App/App.scss
+++ b/src/views/App/App.scss
@@ -9,3 +9,9 @@
     padding: 0;
     text-decoration: none;
     }
+
+    html, body {
+        max-width: 100%;
+        overflow-x: hidden;
+    }
+
